fix scrollbar

--- a/src/styles/Count.module.scss
+++ b/src/styles/Count.module.scss
@@ -47,8 +47,7 @@
 }
 
 .l_modal {
-  @apply overflow-y-auto overflow-x-hidden 
-  fixed right-0 left-0 top-0 z-50 
+  @apply fixed right-0 left-0 top-0 z-50 
   pt-4
   h-full w-full
   md:inset-0;
